examples/compiler_errors/primop_read_file_missing_io.flx
fn main() -> Unit {
    let ignored = read_file("examples/io/input.txt")
}
